Assembler/Spect.Net.EvalParser/Generated/Z80EvalParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.6.6
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\Users\dotne\source\repos\spectnetide\Assembler\AntlrZ80EvalGenerator\AntlrZ80EvalGenerator\Z80Eval.g4 by ANTLR 4.6.6

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace Spect.Net.EvalParser.Generated {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.6.6")]
[System.CLSCompliant(false)]
public partial class Z80EvalParser : Parser {
	public const int
		WS=1, COLON=2, SCOLON=3, COMMA=4, ASSIGN=5, LPAR=6, RPAR=7, LSBRAC=8, 
		RSBRAC=9, QMARK=10, PLUS=11, MINUS=12, VBAR=13, UPARR=14, AMP=15, EQOP=16, 
		NEQOP=17, LTOP=18, LTEOP=19, GTOP=20, GTEOP=21, LSHOP=22, RSHOP=23, MULOP=24, 
		DIVOP=25, MODOP=26, TILDE=27, LDBRAC=28, RDBRAC=29, EXCLM=30, A=31, B=32, 
		C=33, D=34, E=35, H=36, L=37, F=38, I=39, R=40, M=41, XL=42, XH=43, YL=44, 
		YH=45, BC=46, DE=47, HL=48, SP=49, IX=50, IY=51, AF=52, AF_=53, BC_=54, 
		DE_=55, HL_=56, PC=57, WZ=58, ZF=59, NZF=60, CF=61, NCF=62, POF=63, PEF=64, 
		PF=65, MF=66, HF=67, NHF=68, NF=69, NNF=70, R3F=71, NR3F=72, R5F=73, NR5F=74, 
		HEXNUM=75, BINNUM=76, DECNUM=77, CHAR=78, IDENTIFIER=79, IDSTART=80, IDCONT=81, 
		BOOLF=82, BYTEF=83, SBYTEF=84, CHARF=85, HEX4F=86, HEX8F=87, WORDF=88, 
		SWORDF=89, DWORDF=90, SDWORDF=91, BITV8F=92, BITV16F=93, BITV32F=94, ErrorCharacter=95;
	public const int
		RULE_compileUnit = 0, RULE_formatSpec = 1, RULE_expr = 2, RULE_orExpr = 3, 
		RULE_xorExpr = 4, RULE_andExpr = 5, RULE_equExpr = 6, RULE_relExpr = 7, 
		RULE_shiftExpr = 8, RULE_addExpr = 9, RULE_multExpr = 10, RULE_unaryExpr = 11, 
		RULE_literalExpr = 12, RULE_symbolExpr = 13, RULE_z80Spec = 14, RULE_reg8 = 15, 
		RULE_reg16 = 16, RULE_memIndirect = 17, RULE_flags = 18;
	public static readonly string[] ruleNames = {
		"compileUnit", "formatSpec", "expr", "orExpr", "xorExpr", "andExpr", "equExpr", 
		"relExpr", "shiftExpr", "addExpr", "multExpr", "unaryExpr", "literalExpr", 
		"symbolExpr", "z80Spec", "reg8", "reg16", "memIndirect", "flags"
	};

	private static readonly string[] _LiteralNames = {
		null, "' '", "':'", "';'", "','", "'='", "'('", "')'", "'['", "']'", "'?'", 
		"'+'", "'-'", "'|'", "'^'", "'&'", "'=='", "'!='", "'<'", "'<='", "'>'", 
		"'>='", "'<<'", "'>>'", "'*'", "'/'", "'%'", "'~'", "'{{'", "'}}'", "'!'", 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, "'`3'", null, "'`5'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "WS", "COLON", "SCOLON", "COMMA", "ASSIGN", "LPAR", "RPAR", "LSBRAC", 
		"RSBRAC", "QMARK", "PLUS", "MINUS", "VBAR", "UPARR", "AMP", "EQOP", "NEQOP", 
		"LTOP", "LTEOP", "GTOP", "GTEOP", "LSHOP", "RSHOP", "MULOP", "DIVOP", 
		"MODOP", "TILDE", "LDBRAC", "RDBRAC", "EXCLM", "A", "B", "C", "D", "E", 
		"H", "L", "F", "I", "R", "M", "XL", "XH", "YL", "YH", "BC", "DE", "HL", 
		"SP", "IX", "IY", "AF", "AF_", "BC_", "DE_", "HL_", "PC", "WZ", "ZF", 
		"NZF", "CF", "NCF", "POF", "PEF", "PF", "MF", "HF", "NHF", "NF", "NNF", 
		"R3F", "NR3F", "R5F", "NR5F", "HEXNUM", "BINNUM", "DECNUM", "CHAR", "IDENTIFIER", 
		"IDSTART", "IDCONT", "BOOLF", "BYTEF", "SBYTEF", "CHARF", "HEX4F", "HEX8F", 
		"WORDF", "SWORDF", "DWORDF", "SDWORDF", "BITV8F", "BITV16F", "BITV32F", 
		"ErrorCharacter"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[System.Obsolete("Use Vocabulary instead.")]
	public static readonly string[] tokenNames = GenerateTokenNames(DefaultVocabulary, _SymbolicNames.Length);

	private static string[] GenerateTokenNames(IVocabulary vocabulary, int length) {
		string[] tokenNames = new string[length];
		for (int i = 0; i < tokenNames.Length; i++) {
			tokenNames[i] = vocabulary.GetLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = vocabulary.GetSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}

		return tokenNames;
	}

	[System.Obsolete("Use IRecognizer.Vocabulary instead.")]
	public override string[] TokenNames
	{
		get
		{
			return tokenNames;
		}
	}

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Z80Eval.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public Z80EvalParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class CompileUnitContext : ParserRuleContext {
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public ITerminalNode Eof() { return GetToken(Z80EvalParser.Eof, 0); }
		public FormatSpecContext formatSpec() {
			return GetRuleContext<FormatSpecContext>(0);
		}
		public CompileUnitContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_compileUnit; } }
		public override void EnterRule(IParseTreeListener listener) {
			IZ80EvalListener typedListener = listener as IZ80EvalListener;
			if (typedListener != null) typedListener.EnterCompileUnit(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IZ80EvalListener typedListener = listener as IZ80EvalListener;
			if (typedListener != null) typedListener.ExitCompileUnit(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IZ80EvalVisitor<TResult> typedVisitor = visitor as IZ80EvalVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCompileUnit(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CompileUnitContext compileUnit() {
		CompileUnitContext _localctx = new CompileUnitContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_compileUnit);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 38; expr();
			State = 40;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (((((_la - 82)) & ~0x3f) == 0 && ((1L << (_la - 82)) & ((1L << (BOOLF - 82)) | (1L << (BYTEF - 82)) | (1L << (SBYTEF - 82)) | (1L << (CHARF - 82)) | (1L << (HEX4F - 82)) | (1L << (HEX8F - 82)) | (1L << (WORDF - 82)) | (1L << (SWORDF - 82)) | (1L << (DWORDF - 82)) | (1L << (SDWORDF - 82)) | (1L << (BITV8F - 82)) | (1L << (BITV16F - 82)) | (1L << (BITV32F - 82)))) != 0)) {
				{
				State = 39; formatSpec();
				}
			}

			State = 42; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FormatSpecContext : ParserRuleContext {
		public ITerminalNode BYTEF() { return GetToken(Z80EvalParser.BYTEF, 0); }
		public ITerminalNode BOOLF() { return GetToken(Z80EvalParser.BOOLF, 0); }
		public ITerminalNode SBYTEF() { return GetToken(Z80EvalParser.SBYTEF, 0); }
		public ITerminalNode CHARF() { return GetToken(Z80EvalParser.CHARF, 0); }
		public ITerminalNode HEX4F() { return GetToken(Z80EvalParser.HEX4F, 0); }
		public ITerminalNode HEX8F() { return GetToken(Z80EvalParser.HEX8F, 0); }
		public ITerminalNode WORDF() { return GetToken(Z80EvalParser.WORDF, 0); }
		public ITerminalNode SWORDF() { return GetToken(Z80EvalParser.SWORDF, 0); }
		public ITerminalNode DWORDF() { return GetToken(Z80EvalParser.DWORDF, 0); }
		public ITerminalNode SDWORDF() { return GetToken(Z80EvalParser.SDWORDF, 0); }
		public ITerminalNode BITV8F() { return GetToken(Z80EvalParser.BITV8F, 0); }
		public ITerminalNode BITV16F() { return GetToken(Z80EvalParser.BITV16F, 0); }
		public ITerminalNode BITV32F() { return GetToken(Z80EvalParser.BITV32F, 0); }
		public FormatSpecContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_formatSpec; } }
		public override void EnterRule(IParseTreeListener listener) {
			IZ80EvalListener typedListener = listener as IZ80EvalListener;
			if (typedListener != null) typedListener.EnterFormatSpec(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IZ80EvalListener typedListener = listener as IZ80EvalListener;
			if (typedListener != null) typedListener.ExitFormatSpec(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IZ80EvalVisitor<TResult> typedVisitor = visitor as IZ80EvalVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFormatSpec(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FormatSpecContext formatSpec() {
		FormatSpecContext _localctx = new FormatSpecContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_formatSpec);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 44;
			_la = _input.La(1);
			if ( !(((((_la - 82)) & ~0x3f) == 0 && ((1L << (_la - 82)) & ((1L << (BOOLF - 82)) | (1L << (BYTEF - 82)) | (1L << (SBYTEF - 82)) | (1L << (CHARF - 82)) | (1L << (HEX4F - 82)) | (1L << (HEX8F - 82)) | (1L << (WORDF - 82)) | (1L << (SWORDF - 82)) | (1L << (DWORDF - 82)) | (1L << (SDWORDF - 82)) | (1L << (BITV8F - 82)) | (1L << (BITV16F - 82)) | (1L << (BITV32F - 82)))) != 0)) ) {
			_errHandler.RecoverInline(this);
			} else {
				if (_input.La(1) == TokenConstants.Eof) {
					matchedEOF = true;
				}

				_errHandler.ReportMatch(this);
				Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExprContext : ParserRuleContext {
		public OrExprContext orExpr() {
			return GetRuleContext<OrExprContext>(0);
		}
		public ITerminalNode QMARK() { return GetToken(Z80EvalParser.QMARK, 0); }
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public ITerminalNode COLON() { return GetToken(Z80EvalParser.COLON, 0); }
		public ExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expr; } }
		public override void EnterRule(IParseTreeListener listener) {
			IZ80EvalListener typedListener = listener as IZ80EvalListener;
			if (typedListener != null) typedListener.EnterExpr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IZ80EvalListener typedListener = listener as IZ80EvalListener;
			if (typedListener != null) typedListener.ExitExpr(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IZ80EvalVisitor<TResult> typedVisitor = visitor as IZ80EvalVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExprContext expr() {
		ExprContext _localctx = new ExprContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_expr);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 46; orExpr();
			State = 52;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==QMARK) {
				{
				State = 47; Match(QMARK);
				State = 48; expr();
				State = 49; Match(COLON);
				State = 50; expr();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OrExprContext : ParserRuleContext {
		public XorExprContext[] xorExpr() {
			return GetRuleContexts<XorExprContext>();
		}
		public XorExprContext xorExpr(int i) {
			return GetRuleContext<XorExprContext>(i);
		}
		public ITerminalNode[] VBAR() { return GetTokens(Z80EvalParser.VBAR); }
		public ITerminalNode VBAR(int i) {
			return GetToken(Z80EvalParser.VBAR, i);
		}
		public OrExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_orExpr; } }
		public override void EnterRule(IParseTreeListener listener) {
			IZ80EvalListener typedListener = listener as IZ80EvalListener;
			if (typedListener != null) typedListener.EnterOrExpr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IZ80EvalListener typedListener = listener as IZ80EvalListener;
			if (typedListener != null) typedListener.ExitOrExpr(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IZ80EvalVisitor<TResult> typedVisitor = visitor as IZ80EvalVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOrExpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public OrExprContext orExpr() {
		OrExprContext _localctx = new OrExprContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_orExpr);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 54; xorExpr();
			State = 59;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==VBAR) {
				{
				{
				State = 55; Match(VBAR);
				State = 56; xorExpr();
				}
				}
				State = 61;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class XorExprContext : ParserRuleContext {
		public AndExprContext[] andExpr() {
			return GetRuleContexts<AndExprContext>();
		}
		public AndExprContext andExpr(int i) {
			return GetRuleContext<AndExprContext>(i);
		}
		public ITerminalNode[] UPARR() { return GetTokens(Z80EvalParser.UPARR); }
		public ITerminalNode UPARR(int i) {
			return GetToken(Z80EvalParser.UPARR, i);
		}
		public XorExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_xorExpr; } }
		public override void EnterRule(IParseTreeListener listener) {
			IZ80EvalListener typedListener = listener as IZ80EvalListener;
			if (typedListener != null) typedListener.EnterXorExpr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IZ80EvalListener typedListener = listener as IZ80EvalListener;
			if (typedListener != null) typedListener.ExitXorExpr(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IZ80EvalVisitor<TResult> typedVisitor = visitor as IZ80EvalVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitXorExpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public XorExprContext xorExpr() {
		XorExprContext _localctx = new XorExprContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_xorExpr);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 62; andExpr();
			State = 67;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==UPARR) {
				{
				{
				State = 63; Match(UPARR);
				State = 64; andExpr();
				}
				}
				State = 69;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AndExprContext : ParserRuleContext {
		public EquExprContext[] equExpr() {
			return GetRuleContexts<EquExprContext>();
		}
		public EquExprContext equExpr(int i) {
			return GetRuleContext<EquExprContext>(i);
		}
		public ITerminalNode[] AMP() { return GetTokens(Z80EvalParser.AMP); }
		public ITerminalNode AMP(int i) {
			return GetToken(Z80EvalParser.AMP, i);
		}
		public AndExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_andExpr; } }
		public override void EnterRule(IParseTreeListener listener) {
			IZ80EvalListener typedListener = listener as IZ80EvalListener;
			if (typedListener != null) typedListener.EnterAndExpr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IZ80EvalListener typedListener = listener as IZ80EvalListener;
			if (typedListener != null) typedListener.ExitAndExpr(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IZ80EvalVisitor<TResult> typedVisitor = visitor as IZ80EvalVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAndExpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AndExprContext andExpr() {
		AndExprContext _localctx = new AndExprContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_andExpr);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 70; equExpr();
			State = 75;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==AMP) {
				{
				{
				State = 71; Match(AMP);
				State = 72; equExpr();
				}
				}
				State = 77;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EquExprContext : ParserRuleContext {
		public RelExprContext[] relExpr() {
			return GetRuleContexts<RelExprContext>();
		}
		public RelExprContext relExpr(int i) {
			return GetRuleContext<RelExprContext>(i);
		}
		public ITerminalNode[] EQOP() { return GetTokens(Z80EvalParser.EQOP); }
		public ITerminalNode EQOP(int i) {
			return GetToken(Z80EvalParser.EQOP, i);
		}
		public ITerminalNode[] NEQOP() { return GetTokens(Z80EvalParser.NEQOP); }
		public ITerminalNode NEQOP(int i) {
			return GetToken(Z80EvalParser.NEQOP, i);
		}
		public EquExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_equExpr; } }
		public override void EnterRule(IParseTreeListener listener) {
			IZ80EvalListener typedListener = listener as IZ80EvalListener;
			if (typedListener != null) typedListener.EnterEquExpr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IZ80EvalListener typedListener = listener as IZ80EvalListener;
			if (typedListener != null) typedListener.ExitEquExpr(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IZ80EvalVisitor<TResult> typedVisitor = visitor as IZ80EvalVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEquExpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public EquExprContext equExpr() {
		EquExprContext _localctx = new EquExprContext(_ctx, State);
		EnterRule(_localctx, 12, RULE_equExpr);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 78; relExpr();
			State = 83;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==EQOP || _la==NEQOP) {
				{
				{
				State = 79;
				_la = _input.La(1);
				if ( !(_la==EQOP || _la==NEQOP) ) {
				_errHandler.RecoverInline(this);
				} else {
					if (_input.La(1) == TokenConstants.Eof) {
						matchedEOF = true;
					}

					_errHandler.ReportMatch(this);
					Consume();
				}
				State = 80; relExpr();
				}
				}
				State = 85;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class RelExprContext : ParserRuleContext {
		public ShiftExprContext[] shiftExpr() {
			return GetRuleContexts<ShiftExprContext>();
		}
		public ShiftExprContext shiftExpr(int i) {
			return GetRuleContext<ShiftExprContext>(i);
		}
		public ITerminalNode[] LTOP() { return GetTokens(Z80EvalParser.LTOP); }
		public ITerminalNode LTOP(int i) {
			return GetToken(Z80EvalParser.LTOP, i);
		}
		public ITerminalNode[] LTEOP() { return GetTokens(Z80EvalParser.LTEOP); }
		public ITerminalNode LTEOP(int i) {
			return GetToken(Z80EvalParser.LTEOP, i);
		}
		public ITerminalNode[] GTOP() { return GetTokens(Z80EvalParser.GTOP); }
		public ITerminalNode GTOP(int i) {
			return GetToken(Z80EvalParser.GTOP, i);
		}
		public ITerminalNode[] GTEOP() { return GetTokens(Z80EvalParser.GTEOP); }
		public ITerminalNode GTEOP(int i) {
			return GetToken(Z80EvalParser.GTEOP, i);
		}
		public RelExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_relExpr; } }
		public override void EnterRule(IParseTreeListener listener) {
			IZ80EvalListener typedListener = listener as IZ80EvalListener;
			if (typedListener != null) typedListener.EnterRelExpr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IZ80EvalListener typedListener = listener as IZ80EvalListener;
			if (typedListener != null) typedListener.ExitRelExpr(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IZ80EvalVisitor<TResult> typedVisitor = visitor as IZ80EvalVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRelExpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public RelExprContext relExpr() {
		RelExprContext _localctx = new RelExprContext(_ctx, State);
		EnterRule(_localctx, 14, RULE_relExpr);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 86; shiftExpr();
			State = 91;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LTOP) | (1L << LTEOP) | (1L << GTOP) | (1L << GTEOP))) != 0)) {
				{
				{
				State = 87;
				_la = _input.La(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LTOP) | (1L << LTEOP) | (1L << GTOP) | (1L << GTEOP))) != 0)) ) {
				_errHandler.RecoverInline(this);
				} else {
					if (_input.La(1) == TokenConstants.Eof) {
						matchedEOF = true;
					}
